# baseball-analytics

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml  requirements.txt
.claude/: settings.json
.streamlit/: config.toml
data/: fangraphs_war_staging.parquet  fangraphs_war_staging_audit.json  injury_labels.parquet  player_ages.parquet
docs/: NORTH_STAR.md
models/: chemnet_v1.pt  chemnet_v2.pt  mechanix_ae_554430.pt  mechanix_ae_universal.pt  pitch_lstm_10k.pt  pitchgpt_outcome_smoke_frozen.pt  pitchgpt_vtest.pt  stuff_model.pkl
results/: causal_war_baseline_comparison_2023_2024.csv  causal_war_baseline_comparison_2023_2024_metrics.json  causal_war_baseline_scatter.html
scripts/: add_indexes.py  allostatic_load_roc_analysis.py  backfill.py  backfill_2026_04_20_gap.py  backfill_fielder2.py  backfill_fip_xfip.py  backfill_fwar.py  backfill_player_positions.py  backfill_season_war_2010_2014.py  backfill_statcast_gaps_2017_2019.py  baseline_comparison.py  build_projections.py  causal_war_contrarian_stability.py  causal_war_contrarian_stability_plot.py  causal_war_mechanism_ablation.py  causal_war_regression_autopsy_2023_2024.py  causal_war_reproduce_68pct.py  causal_war_tag_filter_baserate.py  chemnet_validation.py  consolidate_staging_to_duckdb.py  daily_refresh.py  defensive_pressing_2025_validation.py  defensive_pressing_prospective_validation.py  defensive_pressing_validation.py  dpi_combined_predictor.py  game_monitor.py  ingest_injury_labels.py  ingest_team_oaa.py  ingest_tj_dates.py  ingest_transactions.py  ingest_umpire_data.py  ingest_weather_conditions.py  live_game_logger.py  mechanix_ae_profiling_analysis.py  mechanix_ae_roc_analysis.py  pitchgpt_ablation.py  (+19 more)
(+1160 files in other folders)
